# jupyterlab-app-cookiecutter

./: .gitignore  MANIFEST.in  README.md  cookiecutter.json  main.py  package.json  pyproject.toml  setup.cfg  setup.py  webpack.config.js
.github/actions/create-package/: action.yml
.github/workflows/: build.yml  check-release.yml  tests.yml  ui-tests.yml  update_galata_references.yml
jupyterlab_app_example/: __init__.py
src/: index.ts
src/plugins/example/: index.ts
ui-tests/: package.json
{{cookiecutter.github_project_name}}/: .eslintrc.js  .gitignore  .prettierignore  MANIFEST.in  README.md  conftest.py  jest.config.js  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.eslint.json  webpack.config.js
{{cookiecutter.github_project_name}}/.github/workflows/: tests.yml
{{cookiecutter.github_project_name}}/src/: index.ts
{{cookiecutter.github_project_name}}/src/plugins/example/: index.ts
{{cookiecutter.github_project_name}}/src/plugins/paths/: index.ts
{{cookiecutter.github_project_name}}/src/plugins/top/: index.tsx  tokens.ts
{{cookiecutter.github_project_name}}/src/tests/app/: app.spec.ts
{{cookiecutter.github_project_name}}/style/: index.js
{{cookiecutter.github_project_name}}/ui-tests/: jupyter_server_config.py  package.json  playwright.config.js
{{cookiecutter.github_project_name}}/ui-tests/tests/: app.test.ts
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/: __init__.py  _version.py
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/tests/: conftest.py  test_example.py
