[metadata]
name = jupyterlab-app-example
version = attr: jupyterlab_app_example._version.__version__
description = JupyterLab Custom App example
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jeremy Tuloup
author_email = jeremy.tuloup@gmail.com
url = https://github.com/jtpio/jupyterlab-app-template
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Notebook
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    jupyterlab>=3.2,<4
    jupyterlab_server~=2.3
    jupyter_server~=1.4
    nbclassic~=0.2
    tornado>=6.1.0

[options.entry_points]
console_scripts =
    jupyterlab-app-example = jupyterlab_app_example:main
