[build-system]
build-backend = "jupyter_packaging.build_api"
requires = ["jupyter_packaging~=0.10", "jupyterlab>=3.2,<4"]

[license]
file = "LICENSE"

[tool.jupyter-packaging.options]
ensured-targets = ["{{cookiecutter.python_package_name}}/static/bundle.js"]
skip-if-exists = ["{{cookiecutter.python_package_name}}/static/bundle.js"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = [
  "app/**",
  "binder/**",
  "buildutils/**",
  "packages/**",
  "*.json",
  "yarn.lock",
  "readthedocs.yml",
  ".bumpversion.cfg",
  ".*",
  "babel.config.js",
  "jest.config.js",
  "lint-staged.config.js",
  "conftest.py",
  "logo.*",
  "{{cookiecutter.python_package_name}}/labextension/**",
  "{{cookiecutter.python_package_name}}/schemas/**",
  "{{cookiecutter.python_package_name}}/static/**",
  "{{cookiecutter.python_package_name}}/template/**",
  "ui-tests/**",
]
