[metadata]
name = {{cookiecutter.python_package_name}}
version = attr: {{cookiecutter.python_package_name}}._version.__version__
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_project_name}}
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Notebook
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    jupyterlab>=3.2,<4
    jupyterlab_server~=2.3
    jupyter_server~=1.4
    nbclassic~=0.2
    tornado>=6.1.0

[options.extras_require]
test =
    pytest
    pytest-tornasync
    
[options.entry_points]
console_scripts =
    {{cookiecutter.github_project_name}} = {{cookiecutter.python_package_name}}:main
    jupyter-{{cookiecutter.github_project_name}} = {{cookiecutter.python_package_name}}:main
